Update server.java